--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Runtime data
+# Runtime db
 pids
 *.pid
 *.seed
@@ -74,6 +74,7 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.development.env
 .env.development.local
 .env.test.local
 .env.production.local
