--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Runtime db
+# Runtime data
 pids
 *.pid
 *.seed
@@ -137,3 +137,6 @@ gen
 
 #dir
 build
+
+#drizzle
+drizzle.config.ts
