--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.5.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.31.2",
     "express": "^4.19.2",
     "postgres": "^3.4.4"
